# dtrace-syscall-sensor-rs

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: callbacks.rs  main.rs  utils.rs
src/linux/: mod.rs
src/linux/bpf/: sensor.bpf.c  sensor.h  vmlinux.h
src/windows/: callbacks.rs  mod.rs
