[package]
name = "syscall-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"

[target.'cfg(target_family = "windows")'.dependencies]
libdtrace-rs = {git = "https://github.com/SubconsciousCompute/libdtrace-rs"}

[target.'cfg(target_family = "unix")'.dependencies]
libbpf-rs = "0.22.1"
libc = "0.2.152"
plain = "0.2.3"

[target.'cfg(target_family = "unix")'.build-dependencies]
libbpf-cargo = "0.22.1"
